--- a/index.html
+++ b/index.html
@@ -447,7 +447,155 @@
         </div>
       </section>
 
-      <!-- Portfolio section 4-->
+      <!-- Portfolio section 4
+      <section class="projects">
+        <div class="container">
+          <h2 class="section-title">Our Portfolio</h2>
+          <ul class="project-list list">
+            <li class="project-item">
+              <a class="project-foto link" href="">
+                <div class="box">
+                  <img
+                    src="./images/projects/raw1-1.jpg"
+                    alt="Bank app"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <h2 class="project-title link">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="project-text link">App</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="project-item">
+              <a class="project-foto link" href="">
+                <div class="box">
+                  <img
+                    src="./images/projects/row1-2.jpg"
+                    alt="Cachless payment"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <h2 class="project-title link">Cashless Payment</h2>
+                  <p class="project-text link">Marketing</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="project-item">
+              <a class="project-foto link" href="">
+                <div class="box">
+                  <img
+                    src="./images/projects/row1-3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <h2 class="project-title link">Meditation App</h2>
+                  <p class="project-text link">App</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="project-item">
+              <a class="project-foto link" href="">
+                <div class="box">
+                  <img
+                    src="./images/projects/raw2-1.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <h2 class="project-title link">Taxi Service</h2>
+                  <p class="project-text link">Marketing</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="project-item">
+              <a class="project-foto link" href="">
+                <div class="box">
+                  <img
+                    src="./images/projects/raw2-2.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <h2 class="project-title link">Screen Illustrations</h2>
+                  <p class="project-text link">Design</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="project-item">
+              <a class="project-foto link" href="">
+                <div class="box">
+                  <img
+                    src="./images/projects/raw2-3.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="project-card">
+                  <h2 class="project-title link">Online Courses</h2>
+                  <p class="project-text link">Marketing</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      -->
+
       <section class="projects">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
@@ -596,82 +744,7 @@
       </section>
     </main>
 
-    <!-- footer 
-  <footer class="footer">
-      <div class="container footer-container">
-        <div class="footer-logo-box">
-          <a class="logo logo-footer link" href="./index.html"
-            >Web<span class="logo-light">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-
-        <div class="social-link-box">
-          <h4 class="social-link-title">Social links</h4>
-          <ul class="social-link-list-footer list">
-            <li class="social-link-item">
-              <div class="social-link-wrapper">
-                <a
-                  class="social-link link"
-                  href="http://instagram.com"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                >
-                  <svg class="social-link-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </div>
-            </li>
-            <li class="social-link-item">
-              <div class="social-link-wrapper">
-                <a
-                  class="social-link link"
-                  href="http://twitter.com"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                >
-                  <svg class="social-link-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </div>
-            </li>
-            <li class="social-link-item">
-              <div class="social-link-wrapper">
-                <a
-                  class="social-link link"
-                  href="http://facebook.com"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                >
-                  <svg class="social-link-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </div>
-            </li>
-            <li class="social-link-item">
-              <div class="social-link-wrapper">
-                <a
-                  class="social-link link"
-                  href="http://linkedin.com"
-                  target="_blank"
-                  rel="noopener no-referrer"
-                >
-                  <svg class="social-link-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </footer>-->
+    <!-- footer -->
 
     <footer class="footer">
       <div class="container footer-container">
