--- a/index.html
+++ b/index.html
@@ -125,36 +125,6 @@
         </div>
       </section>
 
-      <!-- Tasks section 3-->
-      <!--  <section class="tasks">
-        <div class="container">
-          <h2 class="section-title">What are we doing</h2>
-          <ul class="tasks-set list">
-            <li class="tasks-item">
-              <img
-                src="./images/advantages/Rectangle71-2.jpg"
-                alt="PC monitor"
-                width="360"
-              />
-            </li>
-            <li class="tasks-item">
-              <img
-                src="./images/advantages/Rectangle71-1.jpg"
-                alt="Mobil application"
-                width="360"
-              />
-            </li>
-            <li class="tasks-item">
-              <img
-                src="./images/advantages/Rectangle71.jpg"
-                alt="PC and mobil applications"
-                width="360"
-              />
-            </li>
-          </ul>
-        </div>
-      </section>-->
-
       <!-- Team  section 3-->
       <section class="team">
         <div class="container">
@@ -447,155 +417,7 @@
         </div>
       </section>
 
-      <!-- Portfolio section 4
-      <section class="projects">
-        <div class="container">
-          <h2 class="section-title">Our Portfolio</h2>
-          <ul class="project-list list">
-            <li class="project-item">
-              <a class="project-foto link" href="">
-                <div class="box">
-                  <img
-                    src="./images/projects/raw1-1.jpg"
-                    alt="Bank app"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
-                </div>
-                <div class="project-card">
-                  <h2 class="project-title link">
-                    Banking App Interface Concept
-                  </h2>
-                  <p class="project-text link">App</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="project-item">
-              <a class="project-foto link" href="">
-                <div class="box">
-                  <img
-                    src="./images/projects/row1-2.jpg"
-                    alt="Cachless payment"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
-                </div>
-                <div class="project-card">
-                  <h2 class="project-title link">Cashless Payment</h2>
-                  <p class="project-text link">Marketing</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="project-item">
-              <a class="project-foto link" href="">
-                <div class="box">
-                  <img
-                    src="./images/projects/row1-3.jpg"
-                    alt="Meditation App"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
-                </div>
-                <div class="project-card">
-                  <h2 class="project-title link">Meditation App</h2>
-                  <p class="project-text link">App</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="project-item">
-              <a class="project-foto link" href="">
-                <div class="box">
-                  <img
-                    src="./images/projects/raw2-1.jpg"
-                    alt="Taxi Service"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
-                </div>
-                <div class="project-card">
-                  <h2 class="project-title link">Taxi Service</h2>
-                  <p class="project-text link">Marketing</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="project-item">
-              <a class="project-foto link" href="">
-                <div class="box">
-                  <img
-                    src="./images/projects/raw2-2.jpg"
-                    alt="Screen Illustrations"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
-                </div>
-                <div class="project-card">
-                  <h2 class="project-title link">Screen Illustrations</h2>
-                  <p class="project-text link">Design</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="project-item">
-              <a class="project-foto link" href="">
-                <div class="box">
-                  <img
-                    src="./images/projects/raw2-3.jpg"
-                    alt="Online Courses"
-                    width="360"
-                  />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
-                </div>
-                <div class="project-card">
-                  <h2 class="project-title link">Online Courses</h2>
-                  <p class="project-text link">Marketing</p>
-                </div>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-      -->
-
+      <!--Portfolio section 4  -->
       <section class="projects">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
