hw4 deleted div section overlay

--- a/index.html
+++ b/index.html
@@ -140,51 +140,51 @@
               <div class="team-set-item-box">
                 <h3 class="team-member">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
-                <ul class="social-link-list list">
-                  <li class="social-link-item">
+                <ul class="social-list list">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://instagram.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-link-item">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://twitter.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-link-item">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://facebook.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-link-item">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://linkedin.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -203,51 +203,51 @@
               <div class="team-set-item-box">
                 <h3 class="team-member">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
-                <ul class="social-link-list list">
-                  <li class="social-link-item">
+                <ul class="social-list list">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://instagram.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-link-item">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://twitter.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-link-item">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://facebook.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-link-item">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://linkedin.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -266,51 +266,51 @@
               <div class="team-set-item-box">
                 <h3 class="team-member">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
-                <ul class="social-link-list list">
-                  <li class="social-link-item">
+                <ul class="social-list list">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://instagram.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-link-item">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://twitter.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-link-item">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://facebook.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-link-item">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://linkedin.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -329,51 +329,51 @@
               <div class="team-set-item-box">
                 <h3 class="team-member">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
-                <ul class="social-link-list list">
-                  <li class="social-link-item">
+                <ul class="social-list list">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://instagram.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-link-item">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://twitter.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-link-item">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://facebook.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-link-item">
+                  <li class="social-item">
                     <a
                       class="social-link link"
                       href="http://linkedin.com"
                       target="_blank"
                       rel="noopener no-referrer"
                     >
-                      <svg class="social-link-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -397,14 +397,13 @@
                   alt="Bank app"
                   width="360"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
+
               <div class="project-card">
                 <h2 class="project-title link">
                   Banking App Interface Concept
@@ -536,53 +535,53 @@
           </p>
         </div>
 
-        <div class="social-link-box">
-          <p class="social-link-title">Social media</p>
-          <ul class="social-link-list-footer list">
-            <li class="social-link-item">
+        <div class="social-box">
+          <p class="social-title">Social media</p>
+          <ul class="social-list list">
+            <li class="social-item">
               <a
                 class="social-link link"
                 href="http://instagram.com"
                 target="_blank"
                 rel="noopener no-referrer"
               >
-                <svg class="social-link-icon" width="24" height="24">
+                <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-link-item">
+            <li class="social-item">
               <a
                 class="social-link link"
                 href="http://twitter.com"
                 target="_blank"
                 rel="noopener no-referrer"
               >
-                <svg class="social-link-icon" width="24" height="24">
+                <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-link-item">
+            <li class="social-item">
               <a
                 class="social-link link"
                 href="http://facebook.com"
                 target="_blank"
                 rel="noopener no-referrer"
               >
-                <svg class="social-link-icon" width="24" height="24">
+                <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-link-item">
+            <li class="social-item">
               <a
                 class="social-link link"
                 href="http://linkedin.com"
                 target="_blank"
                 rel="noopener no-referrer"
               >
-                <svg class="social-link-icon" width="24" height="24">
+                <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
